kube/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: edp-db-migration-api
  name: edp-db-migration-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: edp-db-migration-api
  template:
    metadata:
      labels:
        app: edp-db-migration-api
    spec:
      containers:
        - name: bitbucket
          image: mikejihbe/db-migrate-server:0.1
          imagePullPolicy: Always
          volumeMounts:
          - name: secrets
            mountPath: /secrets
          resources:
            limits:
              cpu: 1000m
              memory: 1024Mi
            requests:
              cpu: 1000m
              memory: 1024Mi
          ports:
          - containerPort: 8080
            name: http
            protocol: TCP
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: http
              scheme: HTTP
            initialDelaySeconds: 120
            periodSeconds: 6
            successThreshold: 1
            timeoutSeconds: 5
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: http
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 3
      volumes:
        - name: secrets
          emptyDir: {}
